ghc-4335c07/testsuite/tests/typecheck/should_fail/T6018Bfail.hs
{-# LANGUAGE TypeFamilyDependencies #-}

module T6018Bfail where

type family H a b c = (result :: *) | result -> a b c
